--- a/versioning_guideline.html
+++ b/versioning_guideline.html
@@ -27,7 +27,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Git Workflow" href="git_workflow.html" />
-    <link rel="prev" title="Docker Swam Setup on MacOSX" href="docker_swarm_setup_on_macosx.html" /> 
+    <link rel="prev" title="Docker Swam Setup on Linux" href="docker_swarm_setup_on_linux.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -40,7 +40,7 @@
           <a href="git_workflow.html" title="Git Workflow"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="docker_swarm_setup_on_macosx.html" title="Docker Swam Setup on MacOSX"
+          <a href="docker_swarm_setup_on_linux.html" title="Docker Swam Setup on Linux"
              accesskey="P">previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">ESGF-Docker Documentation</a> &#187;</li> 
       </ul>
@@ -219,8 +219,8 @@ the same state of the git repository.</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="docker_swarm_setup_on_macosx.html"
-                        title="previous chapter">Docker Swam Setup on MacOSX</a></p>
+  <p class="topless"><a href="docker_swarm_setup_on_linux.html"
+                        title="previous chapter">Docker Swam Setup on Linux</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="git_workflow.html"
                         title="next chapter">Git Workflow</a></p>
@@ -255,7 +255,7 @@ the same state of the git repository.</p>
           <a href="git_workflow.html" title="Git Workflow"
              >next</a> |</li>
         <li class="right" >
-          <a href="docker_swarm_setup_on_macosx.html" title="Docker Swam Setup on MacOSX"
+          <a href="docker_swarm_setup_on_linux.html" title="Docker Swam Setup on Linux"
              >previous</a> |</li>
         <li class="nav-item nav-item-0"><a href="index.html">ESGF-Docker Documentation</a> &#187;</li> 
       </ul>
