--- a/docker_swarm_setup_on_macosx.html
+++ b/docker_swarm_setup_on_macosx.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Versioning Guideline" href="versioning_guideline.html" />
+    <link rel="next" title="Docker Swam Setup on Linux" href="docker_swarm_setup_on_linux.html" />
     <link rel="prev" title="Architecture and Development Guidelines" href="architecture_and_development_guidelines.html" /> 
   </head>
   <body role="document">
@@ -37,7 +37,7 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="versioning_guideline.html" title="Versioning Guideline"
+          <a href="docker_swarm_setup_on_linux.html" title="Docker Swam Setup on Linux"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="architecture_and_development_guidelines.html" title="Architecture and Development Guidelines"
@@ -174,8 +174,8 @@ don&#8217;t support features used in some scripts. To easly install these tools,
   <p class="topless"><a href="architecture_and_development_guidelines.html"
                         title="previous chapter">Architecture and Development Guidelines</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="versioning_guideline.html"
-                        title="next chapter">Versioning Guideline</a></p>
+  <p class="topless"><a href="docker_swarm_setup_on_linux.html"
+                        title="next chapter">Docker Swam Setup on Linux</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -204,7 +204,7 @@ don&#8217;t support features used in some scripts. To easly install these tools,
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="versioning_guideline.html" title="Versioning Guideline"
+          <a href="docker_swarm_setup_on_linux.html" title="Docker Swam Setup on Linux"
              >next</a> |</li>
         <li class="right" >
           <a href="architecture_and_development_guidelines.html" title="Architecture and Development Guidelines"
