--- a/docker_swarm_setup_on_linux.html
+++ b/docker_swarm_setup_on_linux.html
@@ -217,7 +217,7 @@ eval $(docker-machine env node0) # so as to issue docker commands with
 eval $(docker-machine env node0) # we have switch to the node0 context
 docker stack rm esgf-stack # so as to shutdown ESGF stack because node0 is the swarm manager
 exit # optionally exit the subprocess bash
-docker-machine rm node0 # node1 nodei and so onto
+docker-machine rm node0 node1 # node2 and so onto ; delete the VMs created by docker-machine
 </pre></div>
 </div>
 <p>Associate the IP address of the Swarm manager node to the hostname
