--- a/testing_guide.html
+++ b/testing_guide.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Testing Guide &#8212; ESGF-Docker Documentation</title>
+    <title>Testing Guide &mdash; ESGF-Docker Documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -17,15 +17,14 @@
         VERSION:     '1.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true,
-        SOURCELINK_SUFFIX: '.txt'
+        HAS_SOURCE:  true
       };
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="index" title="Index" href="genindex.html" />
-    <link rel="search" title="Search" href="search.html" />
+    <link rel="top" title="ESGF-Docker Documentation" href="index.html" />
+    <link rel="next" title="Docker Tips" href="docker_tips.html" />
     <link rel="prev" title="esgf-solr Image" href="esgf_solr.html" /> 
   </head>
   <body role="document">
@@ -36,9 +35,12 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="docker_tips.html" title="Docker Tips"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
           <a href="esgf_solr.html" title="esgf-solr Image"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">ESGF-Docker Documentation</a> &#187;</li> 
+        <li><a href="index.html">ESGF-Docker Documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -93,21 +95,27 @@ and with at least one other external openid:</p>
   <h4>Previous topic</h4>
   <p class="topless"><a href="esgf_solr.html"
                         title="previous chapter">esgf-solr Image</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="docker_tips.html"
+                        title="next chapter">Docker Tips</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
-      <li><a href="_sources/testing_guide.rst.txt"
+      <li><a href="_sources/testing_guide.txt"
             rel="nofollow">Show Source</a></li>
     </ul>
    </div>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
-      <div><input type="text" name="q" /></div>
-      <div><input type="submit" value="Go" /></div>
+      <input type="text" name="q" />
+      <input type="submit" value="Go" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
+    <p class="searchtip" style="font-size: 90%">
+    Enter search terms or a module, class or function name.
+    </p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
         </div>
@@ -121,14 +129,17 @@ and with at least one other external openid:</p>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
+          <a href="docker_tips.html" title="Docker Tips"
+             >next</a> |</li>
+        <li class="right" >
           <a href="esgf_solr.html" title="esgf-solr Image"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">ESGF-Docker Documentation</a> &#187;</li> 
+        <li><a href="index.html">ESGF-Docker Documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2017, ESGF.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.6.
+        &copy; Copyright 2017, ESGF.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3b2.
     </div>
   </body>
 </html>
