--- a/git_workflow.html
+++ b/git_workflow.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Git Workflow &mdash; ESGF-Docker Documentation</title>
+    <title>Git Workflow &#8212; ESGF-Docker Documentation</title>
     
     <link rel="stylesheet" href="_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -17,14 +17,16 @@
         VERSION:     '1.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true
+        HAS_SOURCE:  true,
+        SOURCELINK_SUFFIX: '.txt'
       };
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
-    <link rel="top" title="ESGF-Docker Documentation" href="index.html" />
-    <link rel="next" title="esgf-solr Image" href="esgf_solr.html" />
+    <link rel="index" title="Index" href="genindex.html" />
+    <link rel="search" title="Search" href="search.html" />
+    <link rel="next" title="esgf-cog Image" href="esgf_cog.html" />
     <link rel="prev" title="Versioning Guideline" href="versioning_guideline.html" /> 
   </head>
   <body role="document">
@@ -35,12 +37,12 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="esgf_solr.html" title="esgf-solr Image"
+          <a href="esgf_cog.html" title="esgf-cog Image"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="versioning_guideline.html" title="Versioning Guideline"
              accesskey="P">previous</a> |</li>
-        <li><a href="index.html">ESGF-Docker Documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">ESGF-Docker Documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -126,26 +128,23 @@ unique tag that is specific to a developer.</li>
   <p class="topless"><a href="versioning_guideline.html"
                         title="previous chapter">Versioning Guideline</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="esgf_solr.html"
-                        title="next chapter">esgf-solr Image</a></p>
+  <p class="topless"><a href="esgf_cog.html"
+                        title="next chapter">esgf-cog Image</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
-      <li><a href="_sources/git_workflow.txt"
+      <li><a href="_sources/git_workflow.rst.txt"
             rel="nofollow">Show Source</a></li>
     </ul>
    </div>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
-      <input type="text" name="q" />
-      <input type="submit" value="Go" />
+      <div><input type="text" name="q" /></div>
+      <div><input type="submit" value="Go" /></div>
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
-    <p class="searchtip" style="font-size: 90%">
-    Enter search terms or a module, class or function name.
-    </p>
 </div>
 <script type="text/javascript">$('#searchbox').show(0);</script>
         </div>
@@ -159,17 +158,17 @@ unique tag that is specific to a developer.</li>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="esgf_solr.html" title="esgf-solr Image"
+          <a href="esgf_cog.html" title="esgf-cog Image"
              >next</a> |</li>
         <li class="right" >
           <a href="versioning_guideline.html" title="Versioning Guideline"
              >previous</a> |</li>
-        <li><a href="index.html">ESGF-Docker Documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">ESGF-Docker Documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2017, ESGF.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3b2.
+        &#169; Copyright 2017, ESGF.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.6.
     </div>
   </body>
 </html>
